--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,37 @@
 @tailwind base;
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--scroll-color) var(--scroll-bg-color);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--scroll-color) var(--scroll-bg-color);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--scroll-color);
+  border-radius: 14px;
+  border: 3px solid var(--scroll-color);
+}
+
+body .dark {
+  scrollbar-color: var(--scroll-color) #fff;
+}
+
 @tailwind components;
 @tailwind utilities;
  
 @layer base {
   :root {
+    --scroll-color: hsl(0deg 0% 27.17%);
+    --scroll-bg-color: hsl(0deg, 0%, 65.89%);
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
@@ -26,7 +54,7 @@
     --radius: 0.5rem;
   }
  
-  .dark {
+  .dark {    
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
